modo sin subtítulos

--- a/config.ini
+++ b/config.ini
@@ -1,11 +1,14 @@
 [config]
 
-API_KEY = 
+API_KEY =
 API_KEY_SECRET = 
-ACCESS_TOKEN = 
-ACCESS_TOKEN_SECRET = 
-path = capitulos/
-subtitlePath = subtitulos/
+ACCESS_TOKEN =
+ACCESS_TOKEN_SECRET =
+
+withSubtitles = false
 
 alwaysRunning = true
 tiempoEspera = 1800
+
+path = capitulos/
+subtitlePath = subtitulos/
